baml_language/crates/baml_tests/snapshots/__baml_std__/baml_tests____baml_std____01_lexer__audio.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "BAML"
Word "Builtin"
Colon ":"
Word "Audio"
Word "constructors"
Slash "/"
Slash "/"
Word "Namespace"
Colon ":"
Word "baml"
Dot "."
Word "audio"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "Thin"
Word "wrappers"
Word "around"
Word "baml"
Dot "."
Word "Media"
Dot "."
Word "from_"
Star "*"
Word "with"
Word "kind"
Equals "="
Quote "\""
Word "audio"
Quote "\""
Dot "."
Function "function"
Word "from_url"
LParen "("
Word "url"
Colon ":"
Word "string"
Comma ","
Word "mime_type"
Colon ":"
Word "string"
Question "?"
RParen ")"
Arrow "->"
Word "audio"
LBrace "{"
Word "baml"
Dot "."
Word "Media"
Dot "."
Word "from_url"
LParen "("
Quote "\""
Word "audio"
Quote "\""
Comma ","
Word "url"
Comma ","
Word "mime_type"
RParen ")"
RBrace "}"
Function "function"
Word "from_base64"
LParen "("
Word "base64"
Colon ":"
Word "string"
Comma ","
Word "mime_type"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "audio"
LBrace "{"
Word "baml"
Dot "."
Word "Media"
Dot "."
Word "from_base64"
LParen "("
Quote "\""
Word "audio"
Quote "\""
Comma ","
Word "base64"
Comma ","
Word "mime_type"
RParen ")"
RBrace "}"
Function "function"
Word "from_file"
LParen "("
Word "file"
Colon ":"
Word "string"
Comma ","
Word "mime_type"
Colon ":"
Word "string"
Question "?"
RParen ")"
Arrow "->"
Word "audio"
LBrace "{"
Word "baml"
Dot "."
Word "Media"
Dot "."
Word "from_file"
LParen "("
Quote "\""
Word "audio"
Quote "\""
Comma ","
Word "file"
Comma ","
Word "mime_type"
RParen ")"
RBrace "}"
