baml_language/crates/baml_tests/snapshots/__baml_std__/baml_tests____baml_std____01_lexer__pdf.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "BAML"
Word "Builtin"
Colon ":"
Word "PDF"
Word "constructors"
Slash "/"
Slash "/"
Word "Namespace"
Colon ":"
Word "baml"
Dot "."
Word "pdf"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "Thin"
Word "wrappers"
Word "around"
Word "baml"
Dot "."
Word "Media"
Dot "."
Word "from_"
Star "*"
Word "with"
Word "kind"
Equals "="
Quote "\""
Word "pdf"
Quote "\""
Dot "."
Function "function"
Word "from_url"
LParen "("
Word "url"
Colon ":"
Word "string"
Comma ","
Word "mime_type"
Colon ":"
Word "string"
Question "?"
RParen ")"
Arrow "->"
Word "pdf"
LBrace "{"
Word "baml"
Dot "."
Word "Media"
Dot "."
Word "from_url"
LParen "("
Quote "\""
Word "pdf"
Quote "\""
Comma ","
Word "url"
Comma ","
Word "mime_type"
RParen ")"
RBrace "}"
Function "function"
Word "from_base64"
LParen "("
Word "base64"
Colon ":"
Word "string"
Comma ","
Word "mime_type"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "pdf"
LBrace "{"
Word "baml"
Dot "."
Word "Media"
Dot "."
Word "from_base64"
LParen "("
Quote "\""
Word "pdf"
Quote "\""
Comma ","
Word "base64"
Comma ","
Word "mime_type"
RParen ")"
RBrace "}"
Function "function"
Word "from_file"
LParen "("
Word "file"
Colon ":"
Word "string"
Comma ","
Word "mime_type"
Colon ":"
Word "string"
Question "?"
RParen ")"
Arrow "->"
Word "pdf"
LBrace "{"
Word "baml"
Dot "."
Word "Media"
Dot "."
Word "from_file"
LParen "("
Quote "\""
Word "pdf"
Quote "\""
Comma ","
Word "file"
Comma ","
Word "mime_type"
RParen ")"
RBrace "}"
